<resources>
    <string name="app_name">Music App</string>
    <string name="signin">SignIn</string>
    <string name="dont_have_an_account_register">Dont have an account..? Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="already_registered_login">Already Registered..? Login</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="instrument_name">Instrument Name</string>
    <string name="founder">Founder</string>
    <string name="first_use_at">First Use at</string>
    <string name="description">Description</string>
    <string name="motherland">Motherland</string>
    <string name="save">Save</string>
    <string name="savebtn">Save</string>
    <string name="year">Year</string>
    <string name="search">Search</string>
    <string name="save2">Save</string>
</resources>