<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@drawable/searchback"
    android:padding="18dp"

    >
    <LinearLayout
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="240dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:background="@drawable/border"
        android:textColor="@color/black"
        >

        <TextView
            android:text="@string/instrument_name"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/searchInstrumentName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark"
            android:background="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <TextView
            android:text="@string/founder"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"



            />
        <TextView
            android:id="@+id/readFounderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark"
            android:background="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:text="@string/year"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:background="@color/white"
            android:id="@+id/vehiclebrand"
            />
        <TextView
            android:id="@+id/readYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark"
            android:background="@color/white"
            android:textSize="20sp"

            />
        <TextView
            android:text="@string/description"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:background="@color/white"

            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark"
            android:background="@color/white"
            android:textSize="20sp"
            android:id="@+id/readDescription"

            />
        <TextView

            android:text="@string/motherland"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark"
            android:background="@color/white"

            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark"
            android:background="@color/white"
            android:textSize="20sp"
            android:id="@+id/readCountry"

            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>