<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:background="@drawable/uploadback"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="380dp"
        android:padding="20dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:background="@drawable/border"

            >
            <Button
                android:id="@+id/mainUpload"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/upload"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
               android:backgroundTint="@color/darkblue"


                />


            <Button
                android:id="@+id/mainDelete"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/delete"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/darkblue"
                />

            <Button
                android:id="@+id/mainUpdate"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/update"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/darkblue"
                />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>