<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/infoback"
        tools:context=".UploadinfoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="140dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/instrument_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/uploadInstrumentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/dark"
                    android:background="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/founder"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/uploadFounderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/dark"
                    android:background="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/year"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/uploadDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/dark"
                    android:background="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/uploadDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/dark"
                    android:background="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/motherland"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:background="@color/white" />

                <EditText
                    android:id="@+id/uploadCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/dark"
                    android:background="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="120dp"
                    android:backgroundTint="@color/darkblue"
                    android:text="@string/save2"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
