<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/signupback"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="270dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signupEmial"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:textFontWeight="1"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:hint="@string/e_mail"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signupPassword"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:textFontWeight="1"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:layout_marginTop="40dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/signupButton"
                android:layout_marginTop="30dp"
                android:layout_marginStart="100dp"
                android:text="SignUp"
                android:textFontWeight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:backgroundTint="@color/darkblue"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LoginText"
                android:layout_marginTop="20dp"
                android:layout_marginStart="70dp"
                android:textStyle="italic"
                android:textColor="@color/red"
                android:text="@string/already_registered_login"
                />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>